--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,17 @@
+* { 
+  font-family: 'Jacques Francois';
+}
+
 body {
   margin: 0;
-  font-family: monospace, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Jacques Francois', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
-  color: white;
 }
-
-.bioPic {
-  background-image: url("/src/components/images/mobileImg.jpg");
-  width: 200px;
-}
-
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-  
